# m-dl

./: .gitignore  m-dl-update.ps1  m-dl.ps1  m-dl.yaml.sample  pyproject.toml
m_dl/: __init__.py  __main__.py  config.py  db.py  download.py  log.py  tagger.py  ytapi.py  ytdlpitem.py
