[project]
name = "m-dl"
version = "0.1.0"
description = ""
authors = [
    { name = "James Walker", email = "james.chunho@gmail.com" }
]
readme = "README.md"

dependencies = [
    "pyyaml~=6.0.1",
    "python-youtube~=0.9.2",
    "mediafile~=0.12.0",
    "yt-dlp>2023.10.13",
    "pytz~=2023.3.post1",
]

[project.scripts]
m-dl = 'm_dl:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["m_dl"]
