[project]
name = "m-dl"
version = "0.1.0"
description = ""
authors = [
    { name = "James Walker", email = "james.chunho@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pyyaml~=6.0.2",
    "python-youtube~=0.9.2",
    "mediafile~=0.13.0",
    "yt-dlp[default]>=2025.2.23.232748.dev0",
    "pytz~=2025.1",
]

[project.scripts]
m-dl = 'm_dl:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["m_dl"]
